Added Login Fuctionality

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
 
         <div id="members-container" class="content">
             <h1>Members</h1>
+            <p><a href="https://wilberclonts.auth.us-east-1.amazoncognito.com">Register or Login</a></p>
         </div>
     </div>
     <div class="footer-container">
