--- a/index.html
+++ b/index.html
@@ -566,11 +566,11 @@
         </div>
 
 
-
-
         <div id="members-container" class="content">
             <h1>Members</h1>
-            <p><a href="https://wilberclonts.auth.us-east-1.amazoncognito.com">Register or Login</a></p>
+            <p><a
+                    href="https://wilberclonts.auth.us-east-1.amazoncognito.com/login?client_id=4ce65t7dfp2m3g5dlr2lhigqbb&response_type=code&scope=aws.cognito.signin.user.admin&redirect_uri=https%3A%2F%2Fwilberclonts.com%2Flogged_in.html">Register
+                    or Login</a></p>
         </div>
     </div>
     <div class="footer-container">
