reworked blog page content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/socialIcons.css">
+    <link rel="stylesheet" href="css/resume.css">
+    <link rel="stylesheet" href="css/blogContainer.css">
+    <link rel="stylesheet" href="css/contactContainer.css">
+    <link rel="stylesheet" href="css/homeContainer.css">
+    <link rel="stylesheet" href="css/memberContainer.css">
+    <link rel="stylesheet" href="css/mediaContainer.css">
+    <link rel="stylesheet" href="css/biographyContainer.css">
 </head>
 
 <body>
@@ -60,7 +68,7 @@
     </div>
     <div class="main-container">
         <div id="home-container" class="content live">
-            <img class="main-image" src="Screen_Sh.JPG" alt="Mary Sean Young portrait">
+            <img class="main-image" src="images/Screen_Sh.JPG" alt="Mary Sean Young portrait">
             <div class="text-container">
                 <h1>Welcome to my website!</h1>
                 <p style="text-indent: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, possimus
@@ -573,11 +581,20 @@
             <button id="login-button">Login</button>
         </div>
     </div>
+
+
+
     <div class="footer-container">
         <footer> <small>Copyright © 2023 Sean Mary Young . All Rights Reserved.</small></footer>
     </div>
-    <script src="index.js"></script>
-    <script src="blog.js"></script>
+
+
+
+
+    <script src="js/index.js"></script>
+    <script src="js/blog.js"></script>
+    <script src="js/resumeDropdowns.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
