added media no scroll when logged out

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#" data-id="home" class="nav-button live">Home</a></li>
                         <li><a href="#" data-id="resume" class="nav-button">Resume</a></li>
                         <li><a href="#" data-id="biography" class="nav-button">Biography</a></li>
-                        <li><a href="#" data-id="media" class="nav-button">Media</a></li>
+                        <li><a href="#" id="media-button" data-id="media" class="nav-button">Media</a></li>
 
                         <li><a href="#" data-id="blog" class="nav-button">Blog</a></li>
 
@@ -561,37 +561,30 @@
                     <div class="videos-category">Videos</div>
                 </div>
                 <div class="media-photos-container">
-                    <img src="mediaContainerShrunkPhotos/mediaImage1.jpeg" alt="image1" id="image1" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage2.jpeg" alt="image2" id="image2" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage24.jpeg" alt="image24" id="image24" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage3.jpeg" alt="image3" id="image3" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage23.jpeg" alt="image23" id="image23" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage4.jpeg" alt="image4" id="image4" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage22.jpeg" alt="image22" id="image22" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage5.jpeg" alt="image5" id="image5" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage6.jpeg" alt="image6" id="image6" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage7.jpeg" alt="image7" id="image7" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage21.jpeg" alt="image21" id="image21" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage8.jpeg" alt="image8" id="image8" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage9.jpeg" alt="image9" id="image9" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage20.jpeg" alt="image20" id="image20" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage10.jpeg" alt="image10" id="image10" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage11.jpeg" alt="image11" id="image11" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage19.jpeg" alt="image19" id="image19" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage12.jpeg" alt="image12" id="image12" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage13.jpeg" alt="image13" id="image13" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage18.jpeg" alt="image18" id="image18" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage14.jpeg" alt="image14" id="image14" class="photo">
-                    <img src="mediaContainerShrunkPhotos/mediaImage15.jpeg" alt="image15" id="image15" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage16.jpeg" alt="image16" id="image16" class="poster">
-                    <img src="mediaContainerShrunkPhotos/mediaImage17.jpeg" alt="image17" id="image17" class="poster">
-
-
-
-
-
-
-
+                    <img src="mediaContainerPhotos/mediaImage1.jpeg" alt="image1" id="image1" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage2.jpeg" alt="image2" id="image2" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage24.jpeg" alt="image24" id="image24" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage3.jpeg" alt="image3" id="image3" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage23.jpeg" alt="image23" id="image23" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage4.jpeg" alt="image4" id="image4" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage22.jpeg" alt="image22" id="image22" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage5.jpeg" alt="image5" id="image5" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage6.jpeg" alt="image6" id="image6" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage7.jpeg" alt="image7" id="image7" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage21.jpeg" alt="image21" id="image21" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage8.jpeg" alt="image8" id="image8" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage9.jpeg" alt="image9" id="image9" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage20.jpeg" alt="image20" id="image20" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage10.jpeg" alt="image10" id="image10" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage11.jpeg" alt="image11" id="image11" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage19.jpeg" alt="image19" id="image19" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage12.jpeg" alt="image12" id="image12" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage13.jpeg" alt="image13" id="image13" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage18.jpeg" alt="image18" id="image18" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage14.jpeg" alt="image14" id="image14" class="photo">
+                    <img src="mediaContainerPhotos/mediaImage15.jpeg" alt="image15" id="image15" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage16.jpeg" alt="image16" id="image16" class="poster">
+                    <img src="mediaContainerPhotos/mediaImage17.jpeg" alt="image17" id="image17" class="poster">
                 </div>
             </div>
             <div id="logged-out-restriction"></div>
