added message for hania

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div id="home-container" class="content live">
             <img class="main-image" src="images/Screen_Sh.JPG" alt="Mary Sean Young portrait">
             <div class="text-container">
-                <h1>Welcome to my website!</h1>
+                <h1>Hania is the best girlfriend ever!</h1>
                 <p style="text-indent: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, possimus
                     optio. Quae
                     molestias
@@ -624,13 +624,25 @@
 
 
         <div id="members-container" class="content">
-            <h1>Members</h1>
-
-            <p><a
-                    href="https://wilberclonts.auth.us-east-1.amazoncognito.com/login?client_id=4ce65t7dfp2m3g5dlr2lhigqbb&response_type=code&scope=aws.cognito.signin.user.admin&redirect_uri=https%3A%2F%2Fwilberclonts.com%2Flogged_in.html">Register
-                    or Login</a></p>
-            <button id="login-button">Login</button>
+            <div class="login-box">
+                <h1>Sign In</h1>
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <div id="loginButton">Login</div>
+            </div>
+            <div class="register-box">
+                <h1>Create New Account</h1>
+                <input type="name" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="passowrd" placeholder="Password">
+                <div id="createAccountButton">Create Account</div>
+            </div>
         </div>
+
+        <p><a
+                href="https://wilberclonts.auth.us-east-1.amazoncognito.com/login?client_id=4ce65t7dfp2m3g5dlr2lhigqbb&response_type=code&scope=aws.cognito.signin.user.admin&redirect_uri=https%3A%2F%2Fwilberclonts.com%2Flogged_in.html">Register
+                or Login</a></p>
+        <button id="login-button">Login</button>
     </div>
 
 
